@@ -18,5 +18,9 @@ this will leave the site in the directory out/site/
 
 
 
+DISTRIBUTION
 
+* The format-page.py script is GPL
+
+* Verbatim redistribution of the .html files and images is allowed
 
